--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -128,12 +128,15 @@
                 margin-bottom: 8px !important;
                 background: transparent !important;
                 border-bottom: 1px solid #e5e7eb !important;
+                page-break-inside: avoid !important;
+                break-inside: avoid-page !important;
+                -webkit-column-break-inside: avoid !important;
             }
 
             .avoid-break {
-                page-break-inside: auto !important;
-                break-inside: auto !important;
-                -webkit-column-break-inside: auto !important;
+                page-break-inside: avoid !important;
+                break-inside: avoid-page !important;
+                -webkit-column-break-inside: avoid !important;
             }
 
             header, .doc-meta, .text-center.mb-8, footer, .mt-12.pt-10 {
@@ -178,7 +181,7 @@
             <!-- Right: Arabic Details -->
             <div class="font-arabic text-xs text-gray-600 space-y-1 w-1/3 text-right" dir="rtl">
                 <p class="font-bold text-gray-800 text-sm">شركة مخابز إيمان جدة للخبز</p>
-                <p>السجل التجاري : 4030331653</p>
+                <p>السجل التجار : 4030331653</p>
                 <p>الرقم الموحد: 9-4000319</p>
                 <p>الرقم الموحد الوطني: 7015036309</p>
             </div>
@@ -213,7 +216,7 @@
                     <h3 class="font-bold text-lg text-[#8b6131] mb-3">المادة (1) - أحكام عامة</h3>
                     <p class="mb-2">تصدر لائحة تنظيم العمل هذه وفقاً لنظام العمل السعودي الصادر بالمرسوم الملكي رقم (م/51) وتاريخ 23/08/1426هـ وتعديلاته. وتم إعداد هذه اللائحة لتأسيس إطار واضح لعلاقات العمل داخل منظمتنا ولضمان الامتثال للمعايير الوطنية للعمل.</p>
                     <p class="mb-2">وتسري هذه اللائحة على جميع العاملين في شركة مخابز إيمان جدة للخبز وتعد مكملة لعقود العمل، ويجب تطبيقها بما يتماشى مع أحكام نظام العمل.</p>
-                    <p class="mb-2">الغرض من هذه اللائحة هو خلق بيئة عمل شفافة وعادلة ومنتجة حيث يفهم كل من أصحاب العمل والموظفين حقوقهم ومسؤولياتهم المقابلة. ويجب تفسير وتطبيق جميع الأحكام الواردة هنا وفقاً للتشريعات واللوائح الأنظمة المعمول بها.</p>
+                    <p class="mb-2">الغرض من هذه اللائحة هو خلق بيئة عمل شفافة وعادلة ومنتجة حيث يفه كل من أصحاب العمل والموظفين حقوقهم ومسؤولياتهم المقابلة. ويجب تفسير وتطبيق جميع الأحكام الواردة هنا وفقاً للتشريعات واللوائح الأنظمة المعمول بها.</p>
                     <p>يطلب من الموظفين التعرف على هذه اللائحة عند الانضمام إلى الشركة، وتعتزم الإدارة ضمان توفير نسخ منها لجميع الموظفين. يجب توجيه أي استفسارات بشأن التطبيق أو التفسير لهذه الأحكام إلى إدارة الموارد البشرية.</p>
                 </div>
             </div>
@@ -454,5 +457,3 @@
 
 </body>
 </html>
-index.html
-Lines 1-456
